--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,13 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar>	
 
 		<ion-title>Home</ion-title>
-		
-		<ion-buttons slot="start">
+
+		<ion-buttons slot="end">
 			<ion-button href="/profile">
 				<ion-icon slot="icon-only" name="person"></ion-icon>
 			</ion-button>
 		</ion-buttons>
-
-		<!--ion-buttons slot="end">
-			<ion-button (click)="logoutUser()">
-				<ion-icon slot="icon-only" name="log-out"></ion-icon>
-			</ion-button>
-		</ion-buttons-->
 
   </ion-toolbar>
 </ion-header>
