--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Reset Password</ion-title>
+
+		<ion-title>Reset Password</ion-title>
+		
+		<ion-buttons slot="start">
+			<ion-back-button defaultHref="/login"></ion-back-button>
+		</ion-buttons>
+
   </ion-toolbar>
 </ion-header>
 
