--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,5 +13,9 @@
 </ion-header>
 
 <ion-content padding>
+
+	<ion-button expand="block" color="primary" routerLink="/meal-create">Add a meal</ion-button>
+
+	<ion-button expand="block" color="primary" routerLink="/meal-list">View Meals</ion-button>
 	
 </ion-content>
