added sort by price & filter by supplier (for supplier accounts). This'll probably be the deployed app shown to Beefsteak. Bumped to v 0.0.2, although that's mostly ceremonious.

--- a/src/app/pages/dashboard-subscriber/dashboard-subscriber.page.html
+++ b/src/app/pages/dashboard-subscriber/dashboard-subscriber.page.html
@@ -16,6 +16,6 @@
 
 	<ion-button expand="block" color="primary" routerLink="/meal-list">View Available Meals</ion-button>
 
-	<ion-button expand="block" color="primary" routerLink="#">Your Meal History</ion-button>
+	<!--ion-button expand="block" color="primary" routerLink="#">Your Meal History</ion-button-->
 
 </ion-content>
