--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,3 +77,22 @@
   --ion-color-light-tint: #f5f6f9;
 
 }
+
+/*$colors: (
+	primary: #EF5A28,
+	secondary: #f5911e,
+	danger: #f53d3d,
+	light: #f4f4f4,
+	dark: #222,
+	favorite: #69BB7B,
+	darkgraycustom: #333333,
+	mediumgraycustom:#666666,
+	lightgraycustom : #b2b2b2
+);*/
+
+/*@font-face {
+  font-family: 'Open Sans';
+  font-style: extra-bold;
+  font-weight: 900;
+  src: url('../assets/fonts/opensans/900/opensans-extrabold-webfont.ttf');
+}*/
