--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -4,7 +4,7 @@
 			<ion-title>Signup</ion-title>
 		
 		<ion-buttons slot="start">
-			<ion-back-button defaultHref="/login"></ion-back-button>
+			<ion-back-button defaultHref="home"></ion-back-button>
 		</ion-buttons>
 
   </ion-toolbar>
