--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -31,7 +31,6 @@ p, ol {
 	font-family: 'Work Sans Light', sans-serif;
 	font-size: 15px;
 	color: rgba(0, 0, 0, .6);
-	// text-align: justify;
 	margin-right: 20px;
 }
 
@@ -90,7 +89,7 @@ ion-content {
 			color: #FFF;
 		}
 
-		div.buttons {
+		ion-buttons.buttons {
 			height: 40vh;
 
 			display: flex;
@@ -98,9 +97,9 @@ ion-content {
 			align-items: center;
 			justify-content: flex-end;
 
-			button {
+			ion-button {
 				height: 50px;
-				width: 80vw;
+				width: 80%;
 				border-radius: 25px;
 				margin: 10px;
 				background-color: #F2682C;
@@ -108,6 +107,11 @@ ion-content {
 
 				font-family: 'Work Sans Light', sans-serif;
 				font-size: 20px;
+				text-transform: initial;
+
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 		}	
 	}
@@ -127,6 +131,7 @@ ion-content {
 
 		section.second-split {
 			background-color: #e5e5e5;
+			text-align: center;
 		}
 
 		div.image-cutlery {
