--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,13 +17,9 @@
 
 				<h1 class="landing-text">Good food,<br />cheap.</h1>
 
-				<div class="buttons">
-					<button class="sign-up" (click)="signUp()">Sign Up</button>
-					<button class="sign-in" (click)="signIn()">Sign In</button>
-				</div>
-
 				<ion-buttons class="buttons">
 					<ion-button (click)="signUp()">Sign Up</ion-button>
+					<ion-button (click)="signIn()">Sign In</ion-button>
 				</ion-buttons>
 
 			</ion-header>
