split profile page, updated readme

--- a/src/app/pages/dashboard-subscriber/dashboard-subscriber.page.html
+++ b/src/app/pages/dashboard-subscriber/dashboard-subscriber.page.html
@@ -4,7 +4,7 @@
 		<ion-title>Subscriber Dashboard</ion-title>
 
 		<ion-buttons slot="end">
-			<ion-button href="/profile">
+			<ion-button href="/profile-subscriber">
 				<ion-icon slot="icon-only" name="person"></ion-icon>
 			</ion-button>
 		</ion-buttons>
