--- a/src/app/pages/dashboard-supplier/dashboard-supplier.page.html
+++ b/src/app/pages/dashboard-supplier/dashboard-supplier.page.html
@@ -4,7 +4,7 @@
 		<ion-title>Supplier Dashboard</ion-title>
 		
 		<ion-buttons slot="end">
-			<ion-button href="/profile">
+			<ion-button href="/profile-supplier">
 				<ion-icon slot="icon-only" name="person"></ion-icon>
 			</ion-button>
 		</ion-buttons>
